Conversion to numchucks tpl engine

--- a/views/headerScripts.njk
+++ b/views/headerScripts.njk
@@ -8,4 +8,4 @@
     '//platform.twitter.com/widgets.js'
 ] %}
 {% for script in scripts %}     <script type="text/javascript" src="{[ script ]}"></script>
-{% endf
+{% endfor %}
