--- a/views/public/404.njk
+++ b/views/public/404.njk
@@ -1,6 +1,6 @@
-{% extends '_layout.swig' %}
+{% extends '_layout.njk' %}
 
-{% block title %}Lost your GeeNees?{% endblock %}
+{% block title %}Lost your Way?{% endblock %}
 
 {% block content %}
 <div class="container">
