--- a/file-structures/full/src/node_app/views/public/index.njk
+++ b/file-structures/full/src/node_app/views/public/index.njk
@@ -2,7 +2,7 @@
 
 {% block title %}App Title{% endblock %}
 
-{% block customHeadContent %}<script>window.appGlobalData = 'Keep is lightweight here folks, if at all...'</script>{% endblock %}
+{% block customHeadContent %}<script>window.appGlobalData = 'Keep it lightweight here folks, if at all...'</script>{% endblock %}
 
 {% block main_content %}
     <div>
