--- a/file-structures/full/src/node_app/views/authenticated/index.njk
+++ b/file-structures/full/src/node_app/views/authenticated/index.njk
@@ -12,7 +12,7 @@
 
         <div class="container-fluid">
             <div class="row results">
-                Hello world from "src/app_name/module_name/views/authenticated/index.njk"
+                Woop! You are logged in, well done.
             </div>
         </div>
     </div>
