--- a/file-structures/full/src/node_app/views/public/index.njk
+++ b/file-structures/full/src/node_app/views/public/index.njk
@@ -5,15 +5,7 @@
 {% block customHeadContent %}<script>window.appGlobalData = 'Keep it lightweight here folks, if at all...'</script>{% endblock %}
 
 {% block main_content %}
-    <div>
-        <div class="container-fluid">
-            {% include './snippets/header.njk' %}
-        </div>
-
-        <div class="container-fluid">
-            <div class="row results">
-                Hello world from "src/app_name/module_name/views/public/index.njk"
-            </div>
-        </div>
+    <div class="container-fluid">
+        {% include './snippets/login.njk' %}
     </div>
 {% endblock %}
