--- a/file-structures/full/src/node_app/views/public/snippets/header.njk
+++ b/file-structures/full/src/node_app/views/public/snippets/header.njk
@@ -1,12 +1,12 @@
 <div class="row header">
 
-    <div class="col-sm-4 logo">
+    <div class="col-sm-4 header-section">
         YOUR APP
     </div>
-    <div class="col-sm-4 titles">
+    <div class="col-sm-4 header-section">
         SOME OTHER COOL STUFF
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-4 header-section">
         MORE STUFF
     </div>
 </div>
