The routes and authentication working.

--- a/file-structures/full/src/browser_app/sass/core/01-colors.scss
+++ b/file-structures/full/src/browser_app/sass/core/01-colors.scss
@@ -6,7 +6,7 @@ $bd-gd-darkblue2: #0f2940; //rgba(11,26,39,1)
 $hd-gd-dark: #092541;
 $hd-gd-light: #153b5f;
 
-
+$white: #f7f7f7;
 $blue-gd-dark1: #050d15;
 $blue-gd-dark2: #10273b;
 $blue-gd-mid1: #002949;
