--- a/file-structures/full/src/browser_app/sass/core/20-bootstrap.scss
+++ b/file-structures/full/src/browser_app/sass/core/20-bootstrap.scss
@@ -52,7 +52,7 @@ $hr-border: #ccc;
 $padding-base-vertical: 9px !default;
 $padding-base-horizontal: 14px !default;
 
-@import '../../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap';
+@import '../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap';
 
 .navbar {
     border: 0;
