--- a/file-structures/full/src/browser_app/sass/core/_core_loader.scss
+++ b/file-structures/full/src/browser_app/sass/core/_core_loader.scss
@@ -7,7 +7,8 @@
 /**
   App core files
 **/
-@import './colors';
-@import './global-styles';
-@import './html-tags';
-@import './bootstrap';
+@import './01-colors';
+@import './02-sizes';
+@import './03-html-tags';
+@import './05-global-styles';
+@import './20-bootstrap';
