--- a/file-structures/full/src/node_app/views/authenticated/snippets/header.njk
+++ b/file-structures/full/src/node_app/views/authenticated/snippets/header.njk
@@ -1,12 +1,12 @@
 <div class="row header">
 
-    <div class="col-sm-4 logo">
-        You are no authenticated! Very nice!
+    <div class="col-sm-4 header-section">
+        YOUR APP
     </div>
-    <div class="col-sm-4 titles">
+    <div class="col-sm-4 header-section">
         SOME OTHER COOL STUFF
     </div>
-    <div class="col-sm-4">
-        MORE STUFF
+    <div class="col-sm-4 header-section">
+        <a href="/auth/logout">Logout</a>
     </div>
 </div>
