--- a/file-structures/full/src/browser_app/sass/non-core/components/login-form.scss
+++ b/file-structures/full/src/browser_app/sass/non-core/components/login-form.scss
@@ -4,11 +4,12 @@
         position: relative;
         margin: auto;
         float: none;
+        border-radius: $radius-medium;
 
         .account-wall {
             margin-top: 20px;
             padding: 40px 0px 20px 0px;
-            background-color: #f7f7f7;
+            background-color: $white;
             -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
             -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
             box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
