--- a/file-structures/full/src/node_app/views/authenticated/index.njk
+++ b/file-structures/full/src/node_app/views/authenticated/index.njk
@@ -1,6 +1,6 @@
 {% extends './_layout.njk' %}
 
-{% block title %}App Title{% endblock %}
+{% block title %}App Authenticated Area{% endblock %}
 
 {% block customHeadContent %}<script>window.appGlobalData = 'Keep it lightweight here folks, if at all...'</script>{% endblock %}
 
@@ -11,8 +11,15 @@
         </div>
 
         <div class="container-fluid">
-            <div class="row results">
-                Woop! You are logged in, well done.
+            <div class="row dashboard-panel">
+                <div class="content">
+                    <p>Woop! You are logged in, well done!</p>
+                    <p>Your username is: <b>{{ data.username }}</b></p>
+
+                    <div>
+                        {% include './snippets/api-test.njk' %}
+                    </div>
+                </div>
             </div>
         </div>
     </div>
