--- a/file-structures/full/src/node_app/views/authenticated/snippets/api-test.njk
+++ b/file-structures/full/src/node_app/views/authenticated/snippets/api-test.njk
@@ -1,5 +1,14 @@
 
 <div class="api-test">
-    <input type="text"  name="username" class="" placeholder="GET route to call" required autofocus>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Run</button>
+    <h4>Simple api GET test</h4>
+    <form novalidate>
+        <input type="text"  name="route" class="" placeholder="GET: /api/...    " required autofocus>
+        <input class="btn btn-primary btn-block" type="submit" value="Run">
+    </form>
+
+    <div class="results-continer">
+        <div class="api-result">
+            <pre>Results from api...</pre>
+        </div>
+    </div>
 </div>
