--- a/file-structures/full/src/node_app/views/public/index.njk
+++ b/file-structures/full/src/node_app/views/public/index.njk
@@ -7,5 +7,6 @@
 {% block main_content %}
     <div class="container-fluid">
         {% include './snippets/login.njk' %}
+        <small>(check the web console ;) )</small>
     </div>
 {% endblock %}
